<resources>
    <string name="app_name">Logistics App</string>
    <string name="mainFree">Свободен</string>
    <string name="switcher">Переключатель</string>
    <string name="mainInWork">В работе</string>
    <string name="main_text">Основное</string>
    <string name="chat_text">Чат</string>
    <string name="map_text">Карты</string>
    <string name="rating_text">Отзывы</string>
    <string name="profile_text">Профиль</string>
    <string name="active_chat">Активный чат</string>
    <string name="history_chat">История чатов</string>
    <string name="text_chat">Текстовый чат</string>
    <string name="successful_flights_text1">успешных</string>
    <string name="successful_flights_text2">рейсов</string>
    <string name="distance_text">км</string>
    <string name="fuel_text">на топливо</string>
    <string name="repair_text1">доп.</string>
    <string name="repair_text2">Затраты</string>
    <string name="mapMap_text">Карта</string>
    <string name="maplist_text">Список</string>
    <string name="load_date">Загрузка</string>
    <string name="distant">Дистанция</string>
    <string name="setcord">Моё местоположение</string>
    <string name="description">Описание</string>
    <string name="face">Лицо</string>
    <string name="image">Изображение</string>
    <string name="make_request">Оставить заявку</string>
    <string name="hello">Здравствуйте,</string>
    <string name="rating">Рейтинг:</string>
    <string name="max_rating">/5.000</string>
    <string name="exit">Выйти</string>
    <string name="save">Сохранить</string>
    <string name="spinner">Спинер</string>
    <string name="employees">Сотрудники</string>
    <string name="edit_data">Изменение данных</string>
    <string name="link_card">Привязать карту либо счёт</string>
    <string name="calendar">Календарь оплат</string>
    <string name="history_orders">История заказов</string>
    <string name="analytics">Аналитика</string>
    <string name="notifications">Уведомления</string>
    <string name="change_dataTractor">Смена данных тягача/прицепа</string>
    <string name="registration_standard">Регистрационный нормер</string>
    <string name="writeText">Введите текст</string>
    <string name="AddNewPhotoRegistrationCertificate">Добавить новое фото техпаспорта</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="addEmployees">Добавить сотрудника</string>
    <string name="changeData">Изменение данных</string>
    <string name="inn">ИНН</string>
    <string name="name_sur">Имя Фамилия</string>
    <string name="requisites">Реквизиты</string>
    <string name="lookData">Смотреть данные</string>
    <string name="calendarPay">Календарь оплат</string>
    <string name="dayPay">Дата оплаты</string>
    <string name="driver">Водитель</string>
    <string name="client">Клиент</string>
    <string name="forwarder">Экспедитор</string>
    <string name="сargo_owner">Владелец груза</string>
    <string name="registration">Регистрация</string>
    <string name="login">Вход</string>
    <string name="confid">Мы не собираем никаких личных данных и т.п</string>
    <string name="pls_enter_data">Пожалуйста, введите данные в поле ниже</string>
    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="alreadyReg">Уже зарегистрированы?</string>
    <string name="enter_inn">Введите БИН/ИНН</string>
    <string name="title_company">Наименование кампании</string>
    <string name="enter_title_company">Введите наименование кампании</string>
    <string name="documents">Документы</string>
    <string name="add_passport">Паспорт/удостоверение руководителя</string>
    <string name="enter_phone">Введите номер телефона</string>
    <string name="pls_enter_phone">Пожалуйста, введите ваш номер в поле ниже</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="pls_enter_code">Пожалуйста, введите полученный код в поле ниже</string>
    <string name="step">Шаг</string>
    <string name="activeChat">Активный чат с</string>
    <string name="historyChat">История чата с</string>
    <string name="hint_chat">Введите текст здесь...</string>
    <string name="on_position">Я на месте</string>
</resources>