<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/rounded_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mainActivity"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/main_text"
                android:scaleType="centerInside"
                android:src="@drawable/main" />

            <ImageButton
                android:id="@+id/chatActivity"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/chat_text"
                android:scaleType="centerInside"
                android:src="@drawable/mesenger" />

            <ImageButton
                android:id="@+id/mapActivity"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/map_text"
                android:scaleType="centerInside"
                android:src="@drawable/map_sel" />

            <ImageButton
                android:id="@+id/ratingActivity"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/rating_text"
                android:scaleType="fitCenter"
                android:src="@drawable/rating" />

            <ImageButton
                android:id="@+id/profileActivity"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="2dp"
                android:layout_weight="1"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/profile_text"
                android:scaleType="fitCenter"
                android:src="@drawable/profile" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/map_textView_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/mapMap_text"
        android:textColor="@color/blueApp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/map_switch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:thumbTint="@color/blueApp"
        app:layout_constraintBottom_toBottomOf="@+id/map_textView_map"
        app:layout_constraintStart_toEndOf="@+id/map_textView_map"
        app:layout_constraintTop_toTopOf="@+id/map_textView_map"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/map_textView_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/maplist_text"
        android:textColor="#A1887F"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/map_textView_map"
        app:layout_constraintStart_toEndOf="@+id/map_switch"
        app:layout_constraintTop_toTopOf="@+id/map_textView_map" />

    <ImageButton
        android:id="@+id/setMyLoc"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/setcord"
        android:elevation="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/geo"
        app:layout_constraintBottom_toBottomOf="@+id/mapview"
        app:layout_constraintEnd_toEndOf="@+id/mapview" />

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/mapview"
        android:layout_width="0dp"
        android:layout_height="380dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/mapMap_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_textView_map" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapview">

        <androidx.cardview.widget.CardView
            android:id="@+id/grabber"
            android:layout_width="80dp"
            android:layout_height="6dp"
            android:layout_marginHorizontal="172dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/blackApp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView_routes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grabber" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>