<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegTitleCompanyActivity">

    <TextView
        android:id="@+id/titleCompany_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_company"
        android:textColor="@color/black"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleCompany_stepText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Шаг 2/5"
        android:textColor="@color/black"
        android:fontFamily="@font/ibm_plex_sans"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCompany_title" />

    <TextView
        android:id="@+id/titleCompany_enterInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:text="@string/enter_title_company"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCompany_stepText" />

    <TextView
        android:id="@+id/titleCompany_sunInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pls_enter_data"
        android:textColor="@color/black"
        android:fontFamily="@font/ibm_plex_sans"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCompany_enterInfo" />

    <EditText
        android:id="@+id/titleCompany_innEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:paddingLeft="24dp"
        android:background="@drawable/rounded_background"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCompany_sunInfo"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/titleCompany_nextButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/ibm_plex_sans_semibold"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCompany_innEditText" />

    <ImageButton
        android:id="@+id/titleCompany_backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exit"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toStartOf="@+id/titleCompany_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleCompany_title"
        app:srcCompat="@drawable/go_back"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>